--- a/package.json
+++ b/package.json
@@ -12,7 +12,11 @@
   "dependencies": {
     "bcrypt": "^5.1.1",
     "express": "^4.21.2",
+    "express-rate-limit": "^5.0.0",
+    "ioredis": "^4.0.0",
     "mongoose": "^8.12.1",
-    "nodemon": "^3.1.9"
+    "nodemon": "^3.1.9",
+    "rate-limit-redis": "^1.7.0",
+    "redis": "^4.0.0"
   }
 }
